--- a/Back-end/CustomerApp-Api/src/main/resources/invoice.html
+++ b/Back-end/CustomerApp-Api/src/main/resources/invoice.html
@@ -1,206 +1,206 @@
+<!DOCTYPE html>
 <html>
-	<style>
-		body {
-			font-family: "Lato", sans-serif;
-			font-size: 16px;
-			line-height: 1.3;
-			color: rgba(51, 51, 51, 0.8);
-			background: #eaf0f8;
-			margin: 0;
-		}
-		div {
-			box-sizing: border-box;
-		}
-		table {
-			display: table;
-			border-collapse: separate;
-			box-sizing: border-box;
-			text-indent: initial;
-			border-spacing: 2px;
-			border-color: grey;
-		}
-		tr {
-			display: table-row;
-			vertical-align: inherit;
-			border-color: inherit;
-		}
-		th {
-			display: table-cell;
-			vertical-align: inherit;
-			font-weight: bold;
-			text-align: -internal-center;
-		}
-		td {
-			display: table-cell;
-			vertical-align: inherit;
-		}
-		.invoice-content {
-			min-height: 587px;
-			display: block;
-			right: 60px;
-			top: -10px;
-			background: #fff;
-		}
-		.invoice-content div {
-			display: inline-block;
-		}
-		.invoice-content .dates-row {
-			width: 100%;
-			background: #1b275c;
-		}
-		.invoice-content .dates {
-			height: 66px;
-			padding: 0px 0 0 20px;
-		}
-		.invoice-content .dates .title {
-			color: #fff;
-			margin-right: 40px;
-		}
-		.invoice-content p {
-			display: inline-block;
-			line-height: 1.3;
-			font-size: 12px;
-		}
-		.invoice-content .dates .date {
-			color: rgba(255, 255, 255, 0.6);
-		}
-		.invoice-content .invoice-number {
-			font-size: 16px;
-			color: rgba(255, 255, 255, 0.6);
-			text-align: right;
-			background: #49527d;
-			float: right;
-			min-width: 140px;
-			height: 66px;
-			padding: 10px 20px 0 0;
-		}
-		.invoice-content .invoice-number strong {
-			color: rgba(255, 255, 255, 1);
-		}
-		.invoice-content strong {
-			font-weight: 900;
-		}
-		.invoice-content .logo-row {
-			width: 100%;
-			padding: 20px 5% 10px 5%;
-		}
-		.invoice-content .customer-number {
-			margin-top: 20px;
-			min-width: 180px;
-		}
-		.invoice-content .customer-number .title {
-			margin-right: 30px;
-		}
-		.invoice-content .company-logo {
-			float: right;
-		}
-		.invoice-content .company-details {
-			margin: 0 5% 0 5%;
-			display: flex;
-		}
-		.w100 {
-			width: 100%;
-		}
-		.m-b-10 {
-			margin-bottom: 10px;
-		}
-		.text-bold {
-			font-weight: bold;
-		}
-		.text-right {
-			text-align: right;
-		}
-		.product-table {
-			margin: 10px 5% 0 5%;
-			border-spacing: 0;
-			width: 90%;
-		}
-		.product-table .title-row {
-			background: #1b275c;
-			color: #fff;
-			font-weight: 700;
-			font-size: 12px;
-		}
-		.text-left {
-			text-align: left;
-		}
-		.product-table .title-row > th {
-			padding: 5px 10px;
-		}
-		.product-table .product-row {
-			font-size: 12px;
-		}
-		.product-table .product-row > td {
-			padding: 7px 10px;
-		}
-		.text-opacity {
-			opacity: 0.6;
-		}
-		.product-table .product-row:nth-child(odd) {
-			background: rgba(27, 39, 91, 0.08);
-		}
-		.product-table .total-row {
-			font-weight: bold;
-		}
-		.invoice-content .payment-contact {
-			position: absolute;
-			width: 100%;
-			height: 100px;
-			bottom: 20px;
-			left: 0;
-			display: block;
-			background: rgba(27, 39, 91, 0.08);
-			padding: 10px 20px;
-		}
-		.invoice-content .payment-instruction {
-			width: 50%;
-		}
-		.invoice-content .contact-details {
-			width: 50%;
-			float: right;
-		}
-		.invoice-content .invoice-footer {
-			width: 100%;
-			height: 20px;
-			background: #1b275c;
-			position: absolute;
-			bottom: 0;
-			left: 0;
-		}
-	</style>
+	<head>
+		<style>
+			body {
+				font-family: "Lato", sans-serif;
+				font-size: 16px;
+				line-height: 1.3;
+				color: black;
+				background-color: {{COLOR_LIGHTEST}};
+				margin: 0;
+			}
+			div {
+				box-sizing: border-box;
+			}
+			table {
+				display: table;
+				border-collapse: separate;
+				box-sizing: border-box;
+				text-indent: initial;
+				border-spacing: 2px;
+				border-color: grey;
+			}
+			tr {
+				display: table-row;
+				vertical-align: inherit;
+				border-color: inherit;
+			}
+			th {
+				display: table-cell;
+				vertical-align: inherit;
+				font-weight: bold;
+			}
+			td {
+				display: table-cell;
+				vertical-align: inherit;
+			}
+			.invoice-content {
+				min-height: 587px;
+				display: block;
+				right: 60px;
+				top: -10px;
+				background-color: #fff;
+			}
+			.invoice-content div {
+				display: inline-block;
+			}
+			.invoice-content .dates-row {
+				width: 100%;
+				background-color: {{COLOR}};
+			}
+			.invoice-content .dates {
+				height: 66px;
+				padding: 0px 0 0 20px;
+			}
+			.invoice-content .dates .title {
+				color: {{TEXT_COLOR}};
+				margin-right: 40px;
+			}
+			.invoice-content p {
+				display: inline-block;
+				line-height: 1.3;
+				font-size: 12px;
+			}
+			.invoice-content .dates .date {
+				color: {{TEXT_COLOR}};
+			}
+			.invoice-content .invoice-number {
+				font-size: 16px;
+				color: {{TEXT_COLOR_LIGHT}};
+				text-align: right;
+				background-color: {{COLOR_LIGHT}};
+				right: 0;
+				position: absolute;
+				min-width: 140px;
+				height: 66px;
+				padding: 10px 20px 0 20px;
+			}
+			.invoice-content .invoice-number strong {
+				color: rgba(255, 255, 255, 1);
+			}
+			.invoice-content .logo-row {
+				width: 100%;
+				padding: 20px 5% 10px 5%;
+			}
+			.invoice-content .customer-number {
+				margin-top: 20px;
+				min-width: 180px;
+			}
+			.invoice-content .customer-number .title {
+				margin-right: 30px;
+			}
+			.invoice-content .company-logo {
+				float: right;
+				padding: 20px 0 0 0;
+			}
+			.invoice-content .company-details {
+				margin: 0 5% 0 5%;
+				display: flex;
+			}
+			.w100 {
+				width: 100%;
+			}
+			.m-b-10 {
+				margin-bottom: 10px;
+			}
+			.text-bold {
+				font-weight: bold;
+			}
+			.text-right {
+				text-align: right;
+			}
+			.product-table {
+				margin: 10px 5% 0 5%;
+				border-spacing: 0;
+				width: 90%;
+			}
+			.product-table .title-row {
+				background-color: {{COLOR}};
+				color: {{TEXT_COLOR}};
+				font-weight: 700;
+				font-size: 12px;
+			}
+			.text-left {
+				text-align: left;
+			}
+			.product-table .title-row > th {
+				padding: 5px 10px;
+			}
+			.product-table .product-row {
+				font-size: 12px;
+			}
+			.product-table .product-row > td {
+				padding: 7px 10px;
+			}
+			.text-opacity {
+				opacity: 0.6;
+			}
+			.product-table .product-row:nth-child(odd) {
+				color: {{TEXT_COLOR_LIGHT}};
+				background-color: {{COLOR_LIGHT}};
+			}
+			.product-table .total-row {
+				font-weight: bold;
+			}
+			.invoice-content .payment-contact {
+				position: absolute;
+				width: 100%;
+				height: 100px;
+				bottom: -353px;
+				background-color: {{COLOR_LIGHT}};
+				padding: 10px 20px;
+			}
+			.invoice-content .payment-instruction {
+				width: 50%;
+				color: {{TEXT_COLOR_LIGHT}};
+			}
+			.invoice-content .contact-details {
+				width: 50%;
+				display: inline;
+			}
+			.invoice-content .invoice-footer {
+				width: 100%;
+				height: 20px;
+				background-color: {{COLOR}};
+				position: absolute;
+				bottom: -373px;
+			}
+		</style>
+	</head>
 	<body>
 		<div class="invoice-content">
 		  <div class="dates-row">
 			<div class="dates">
 			  <p class="title">
 				<span>Rekening</span>
-				Datum:<br>Betaal Datum:<br>Bedrag:
+				Datum:<br/>Betaal Datum:<br/>Bedrag:
 			  </p>
 			  <p class="date">
-				<span>19.01.2021</span><br>
-				<span>02.02.2021</span><br>
-				<span>361.58</span>
+				<span>{{DATE}}</span><br/>
+				<span>{{PAYMENT_DATE}}</span><br/>
+				<span>{{TOTAL}}</span>
 			  </p>
 			</div>
 
 			<div class="invoice-number">
-			  <span>REKENING</span><br>
-			  <strong>I2021011261</strong>
+			  <span>REKENING</span><br/>
+			  <strong>{{INVOICE_NR}}</strong>
 			</div>
 		  </div>
 		  <div class="logo-row">
 			<div class="customer-number">
 			  <p class="title">Klant Tafel</p>
-			  <p class="number">1</p>
+			  <p class="number">{{TABLE_NR}}</p>
 			</div>
 			<div class="company-logo">
-			  <img src="pizzahut.png" width="60" height="auto" alt="company-logo">
+				<img src="{{LOGO}}" width="60" height="auto" alt="company-logo" />
 			</div>
 		  </div>
 		  <div class="company-details">
 			<div class="">
-			  <div class="text-bold m-b-10 w100">PizzaHut</div>
-			  <p class="address">86 Park Straat<br>Amsterdam 1008 DG<br>Nederland</p>
+			  <div class="text-bold m-b-10 w100">{{RESTAURANT_NAME}}</div>
+			  <p class="address">{{ADDRESS}}<br/>{{POSTAL_CODE}} {{CITY}}<br/>{{COUNTRY}}</p>
 			</div>
 		  </div>
 		  <table id="invoice-details" class="product-table">
@@ -211,27 +211,16 @@
 			  <th class="text-right" style="width: 20%;">Prijs</th>
 			  <th class="text-right">Bedrag</th>
 			</tr>
-			<tr class="product-row">
-			  <td>
-				<div>Item 1</div>
-				<div class="text-opacity"></div>
-			  </td>
-			  <td>3</td>
-			  <td>
-				<div>✓</div>
-			  </td>
-			  <td class="text-right">15,-</td>
-			  <td class="text-right">45,-</td>
-			</tr>
+			{{PRODUCTS}}
 			<tr class="product-row">
 			  <td colspan="2"></td>
 			  <td colspan="2" class="text-left">Subtotaal</td>
-			  <td class="text-right">45,-</td>
+			  <td class="text-right">{{SUBTOTAL}}</td>
 			</tr>
 			<tr class="product-row">
 			  <td colspan="2"></td>
-			  <td colspan="2" class="text-left">BTW (<span>23.00</span>%)</td>
-			  <td class="text-right">55.35</td>
+			  <td colspan="2" class="text-left">BTW (<span>9.00</span>%)</td>
+			  <td class="text-right">{{BTW_TOTAL}}</td>
 			</tr>
 			<tr class="product-row total-row">
 			  <td colspan="2"></td>
@@ -241,24 +230,23 @@
 				  <span>EUR</span>
 				</div>
 			  </td>
-			  <td class="text-right">55.35</td>
+			  <td class="text-right">{{TOTAL}}</td>
 			</tr>
 		  </tbody></table>
 		  <div class="payment-contact">
 			<div class="payment-instruction">
 			  <p>
-				<strong>Restaurant rekening</strong><br>
-				<span>ING<br>PizzaHut<br>NL96 5871 2086 2744 5489</span>
+				<strong>Restaurant rekening</strong><br/>
+				<span>{{RESTAURANT_NAME}}<br/>{{IBAN}}</span>
 			  </p>
 			</div>
 			<div class="contact-details">
 			  <p>
-				<strong>Contact Details</strong><br>
-				<span>E.Lewis<br>Tel.: +31 188337415<br>Mail: e.lewis@generico.com</span>
+				<strong>Contact Details</strong><br/>
+				<span>{{CONTACT_NAME}}<br/>Tel.: {{CONTACT_PHONE}}<br/>Mail: {{CONTACT_EMAIL}}</span>
 			  </p>
 			</div>
 		  </div>
-		  
 		  <div class="invoice-footer"></div>
 		</div>
 	</body>
